--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
+    "@tanstack/react-table": "^8.11.6",
+    "@tanstack/react-virtual": "^3.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
@@ -11,6 +13,7 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "ag-grid-react": "^31.0.1",
     "antd": "^5.12.8",
     "axios": "^1.3.2",
     "i18next": "^22.4.9",
@@ -19,6 +22,8 @@
     "moment": "^2.29.4",
     "node-html-parser": "^6.1.4",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.4",
     "react-icons": "^4.12.0",
